2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-bookmarks.c, src/yelp-db-pager.c, src/yelp-gecko-utils.cpp,
	* src/yelp-info-pager.c, src/yelp-info-parser.c, 
	* src/yelp-man-pager.c, src/yelp-man-parser.c, 
	* src/yelp-search-pager.c, src/yelp-toc-pager.c, 
	* src/yelp-utils.c, src/yelp-window.c, src/yelp-xslt-pager.c
	Cleanup compiler warnings (casts)

2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	Remove warning about `stock_id != NULL' in new window

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/yelp-search-pager.c: Set base_title property.  Added
	text/x-docbook-entry to mime types.  Always send the search
	request instead of only in debug mode.

	* stylesheets/search2html.xsl: Use base_title property.  Don't
	sort by score.  The C code handles that now (as well as language.)

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/yelp-search-pager.c: Fix a crash.  Add language sorting.
	Fix some warnings.

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/gtkentryaction.c (sync_label): Remove extraneous print statement.

	* src/yelp-search-pager.c (d): Remove extraneous print statements.
	(search_pager_process): Check for a NULL beagle_client to handle
	the case of no running beagle daemon.

2005-10-28  Christopher James Lahey  <clahey@ximian.com>

	* configure.in, data/yelp.js, data/ui/Makefile.am,
	data/ui/yelp-search-ui.xml, data/ui/yelp-ui.xml, src/Makefile.am,
	src/gtkentryaction.c, src/gtkentryaction.h,
	src/yelp-search-pager.c, src/yelp-search-pager.h,
	src/yelp-utils.c, src/yelp-utils.h, src/yelp-window.c,
	stylesheets/Makefile.am, stylesheets/search-header.xsl,
	stylesheets/search2html.xsl: Add optional search framework.

2005-10-28  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added ky (Kirghiz) to ALL_LINGUAS.

2005-10-22  Brent Smith  <gnome@nextreality.net>

	* src/yelp-bookmarks.c: (yelp_bookmarks_edit):