@@ -1,3 +1,9 @@
+2005-11-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-bookmarks.c: 
+	Remove warning about non existant bookmark file (from Paolo Borelli)
+	Fixes #310097
+	
 2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-bookmarks.c, src/yelp-db-pager.c, src/yelp-gecko-utils.cpp,
